# domcsis-epic-tinker-box

./: CHANGELOG.md  DIARY.md  README.md  Rough_list_of_future_features.md  develop.py
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_pauli_baseline.json
.github/workflows/: TagBot.yml  julia-docs.yml  julia-format.yml  julia-loc.yml  julia-tests.yml  loc.yml  python-mypy.yml  python-publish.yml  python-pytest.yml  python-ruff.yml  update-loc.yml
data/stabilizer_states/: 1_qubit_stabilizer_states.txt  1q_stabilizer_states.txt  2_qubit_stabilizer_states.txt  2q_stabilizer_states.txt  3_qubit_stabilizer_states.txt
julia/: .gitignore  Manifest.toml  Project.toml
julia/docs/: Project.toml  make.jl
julia/docs/src/: api.md  index.md
julia/src/: DomcsisEpicTinkerBox.jl  detb.jl  pauli_operators.jl  quantum_state.jl  random_number_generation.jl  stabilizer_renyi_entropy.jl  statistical_moments.jl  statistics.jl
julia/test/: runtests.jl
python/: README.md  pyproject.toml  requirements.txt
python/benchmarks/: bench_pauli_micro.py  bench_pauli_operators.py  bench_pauli_release.py  bench_pauli_scaling.py
python/benchmarks/results/: pauli_operator_generatio_scaling.csv  release_v0.1.4.json
python/src/domcsis_epic_tinker_box/: __init__.py
python/src/domcsis_epic_tinker_box/bloch_oscillations/: __init__.py  backends.py  circuit.py  io.py  model.py  observables.py  simulation.py
python/src/domcsis_epic_tinker_box/magic/: __init__.py  stabilizer_renyi_entropy.py
python/src/domcsis_epic_tinker_box/pauli_algebra/: __init__.py  pauli_operators.py
python/src/domcsis_epic_tinker_box/quantum_state/: __init__.py  bell_states.py  quantum_state.py  w_states.py
python/src/domcsis_epic_tinker_box/statistics/: __init__.py  random_number_generation.py  statistical_moments.py
python/src/pauli_algebra/: pauli_operators.py
python/src/quantum_states/: one_qubit_stabilizer_states.py
python/tests/bloch_oscillations/: test_circuit.py  test_io.py  test_model.py  test_observables.py  test_simulation.py
python/tests/test_magic/test_sre/: test_stabilizer_renyi_entropy.py
python/tests/test_pauli_algebra/: test_pauli_operators.py  test_pauli_operators_class.py
python/tests/test_quantum_states/: test_bell_states.py  test_quantum_state.py  test_w_states.py
python/tests/test_statistics/: test_random_number_generation.py  test_statistical_moments.py
